Fixed width of Action type  select component width to fix truncation

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -714,3 +714,13 @@ fieldset {
 table.c3-tooltip td {
   background-color: #393f44;
 }
+
+
+  #action_info_div{
+  .bootstrap-select
+  {
+    .dropdown-toggle{
+        width:max-content;
+    }
+  }
+  }
